@@ -29,6 +29,7 @@ Boston, MA 02111-1307, USA.  */
 
 #include <stdio.h>
 #include <assert.h>
+#include <sys/stat.h>
 
 #ifdef HAVE_STDLIB_H
 #include <stdlib.h>
