@@ -1,3 +1,8 @@
+2011-12-28  Borut Razem  <borutr@users.sourceforge.net>
+  * include/stdhdr.h, gputils/gpvo.c, libgputils/gpcoff.h,
+    libgputils/gpreadobj.c: gpvo shows additional info:
+    COFF version, section header Virtual address
+
 2011-12-27  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/lst.c, gpasm/gpasm.c, gpasm/directive.c, gpasm/gperror.c,
     gpasm/gpasm.h: make listing more compatible with MPASM
